1.0.3
	Overview
		* An overhaul of the way textures are handled, see the Texture tutorial for help on updating your code http://stickycoding.com/rokon/rokon-tutorials/managing-textures
	
	New Features
		* Basic and Advanced Menu examples added
		* Handling the accelerometer can be done through RokonActivity, see Example15
		* New, far more advanced particle engine
		* Custom Tile Animation method for Sprite
		
	Changes
		* Removed Emitter package, functionality replaced by ParticleModifier's
		* Documentation added to previous examples
		* Sprite, Particle, Emitter all now extend the superclass DynamicObject - in an attempt to the dynamics' functions
	
	Bug Fixes
		* Texture loading error, 'width and height > 0' has been fixed - it was due to variables not being reset properly when the engine is created

1.0.2 - 19/12/2009
	Overview
		* Reworked OpenGL classes
		* Game menu system working
		
	New Features
		* Menu, MenuObject
		
	Changes
		* A new GLSurfaceView/GLRenderer improves speed and touch accuracy
		* Package name changed from rokon to com.stickycoding.rokon
		* Method of handling screen sizes optimized
		* Texture loading has changed, textures are placed on the hardware through texSubImage2D one by one, instead of copying the whole atlas over. This is instead of storing all the bitmaps in the memory for the whole game. 
		
	Bug Fixes
		* A bug in TextureAtlas causing the engine to crash when preparing an atlas
		
1.0.1 - 29/11/2009
 	Overview
 		* Texture handling has been greatly improved, quicker to load, more control over its content - the texture can be changed after it has already been loaded
 		* The engine will automatically crop to the correct aspect ratio on larger screens
 		* The loading screen now scales any sized image to any sized screen, and appears quicker
 		
 	New Features