@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.stickycoding.RokonExamples"
       android:versionCode="1"
-      android:versionName="1.0.2">
+      android:versionName="1.1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".Launcher"
                   android:label="Rokon Example">
@@ -33,7 +33,7 @@
 
     <activity android:screenOrientation="landscape" android:name=".Example16"></activity>
 </application>
-    <uses-sdk android:minSdkVersion="3" />
+    <uses-sdk android:minSdkVersion="4" />
 
 <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
 <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
