@@ -4,7 +4,6 @@ This is a very simple roadmap, I have laid out the features I would like the eng
  * An advanced menu system, for in and out-of-game menu's - including many View-like objects (lists, option boxes)
  * Tiled game engine
  * Advanced Particle Engine
- * Better texture handling, ability to update/load/change while playing
  * Polygon-based collision detection
  * Post processing & z-order effects
  * Integrated physics, potentially through NDK
